feat: Apply program parameter selections
Apply all logics after change program parameter selections on loading program stages and events

--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -36,7 +36,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <div *ngIf="!isLoading">
+        <div *ngIf="isMetadataLoaded">
           <program-parameter-selection (programParameterSelection)="onProgramParameterSelection($event)" [currentUser]="currentUser"
             [programIdsByUserRoles]="programIdsByUserRoles" [selectedDataDimension]="selectedDataDimension"
             [programType]="programType"></program-parameter-selection>
