--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -32,43 +32,33 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center
-          text-capitalize (tap)="openOrganisationUnitTree()">
-          <img class="side-menu-icon" [src]="icons.orgUnit" />&nbsp;&nbsp;
-          <span *ngIf="!selectedOrgUnit || !selectedOrgUnit.name" [translate]="organisationUnitLabel"></span>
-          <span *ngIf="selectedOrgUnit && selectedOrgUnit.name">
-            {{ selectedOrgUnit.name }}</span>
-        </div>
-        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center
-          text-capitalize (tap)="openProgramList()">
-          <img class="side-menu-icon" [src]="icons.program" />&nbsp;&nbsp;
-          <span *ngIf="!selectedProgram || !selectedProgram.name" [translate]="programLabel"></span>
-          <span *ngIf="selectedProgram && selectedProgram.name">{{
-            selectedProgram.name
-            }}</span>
-        </div>
-        <div *ngIf="isFormReady">
-          <div class="event-storage-status">
-            <span>
-              <b> <span [translate]="'Synced'"></span> </b> :
-              {{ storageStatus.online }}
-              <b> <span [translate]="'Not synced'"></span> </b> :
-              {{ storageStatus.offline }}
-              <span *ngIf="showTrackerConflictHandler" margin-left>&nbsp;&nbsp;
-                <tracker-conflict-handler [trackerConflictHandler]="trackerConflictHandler"
-                  (successTrackerConflictHandler)="onSuccessTrackerConflictHandling($event)" (successDiscovering)="onSuccessDiscoveringTrackerData($event)"></tracker-conflict-handler>
+        <div *ngIf="isMetadataLoaded">
+          <program-parameter-selection (programParameterSelection)="onProgramParameterSelection($event)" [currentUser]="currentUser"
+            [programIdsByUserRoles]="programIdsByUserRoles" [selectedDataDimension]="selectedDataDimension"
+            [programType]="programType"></program-parameter-selection>
+          <div *ngIf="isFormReady">
+            <div class="event-storage-status">
+              <span>
+                <b> <span [translate]="'Synced'"></span> </b> :
+                {{ storageStatus.online }}
+                <b> <span [translate]="'Not synced'"></span> </b> :
+                {{ storageStatus.offline }}
+                <span *ngIf="showTrackerConflictHandler" margin-left>&nbsp;&nbsp;
+                  <tracker-conflict-handler [trackerConflictHandler]="trackerConflictHandler"
+                    (successTrackerConflictHandler)="onSuccessTrackerConflictHandling($event)" (successDiscovering)="onSuccessDiscoveringTrackerData($event)"></tracker-conflict-handler>
+                </span>
               </span>
-            </span>
-          </div>
-          <div class="item-card" (click)="hideAndShowColumns()" color="font-color" padding-top padding-bottom
-            ion-button clear text-center text-capitalize icon-start>
-            <ion-icon name="ios-eye" color="icon-color"></ion-icon>
-            <span [translate]="'Columns'"></span>
-          </div>
-          <div class="item-card" (click)="registerNewTrackedEntity()" color="font-color" padding-top padding-bottom
-            ion-button clear text-center text-capitalize icon-start>
-            <ion-icon name="add" color="icon-color"></ion-icon>
-            <span [translate]="'Add'"></span>
+            </div>
+            <div class="item-card" (click)="hideAndShowColumns()" color="font-color" padding-top padding-bottom
+              ion-button clear text-center text-capitalize icon-start>
+              <ion-icon name="ios-eye" color="icon-color"></ion-icon>
+              <span [translate]="'Columns'"></span>
+            </div>
+            <div class="item-card" (click)="registerNewTrackedEntity()" color="font-color" padding-top padding-bottom
+              ion-button clear text-center text-capitalize icon-start>
+              <ion-icon name="add" color="icon-color"></ion-icon>
+              <span [translate]="'Add'"></span>
+            </div>
           </div>
         </div>
       </ion-col>
@@ -92,9 +82,9 @@
                 </thead>
                 <tbody *ngIf="tableLayout.rows">
                   <tr [ngStyle]="{ 'background-color': '#F4F4F4' }" *ngFor="
-                      let row of tableLayout.rows;
-                      let currentIndex = index
-                    "
+                        let row of tableLayout.rows;
+                        let currentIndex = index
+                      "
                     (click)="openTrackedEntityDashboard(currentIndex)">
                     <td *ngFor="let data of row">{{ data }}</td>
                   </tr>
