--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -57,8 +57,11 @@
               <b>
                 <span [translate]="'Not synced'"></span>
               </b> : {{storageStatus.offline }}</span>
-            <br><br><span class="item-card lock-form" *ngIf="isPeriodLocked">
-              <span [translate]="'Entry form has been locked for this period'"></span>
+            <span *ngIf="isPeriodLocked">
+              <br><br>
+              <span padding-left class="item-card lock-form">
+                <span [translate]="'Entry form has been locked for this period'"></span>
+              </span>
             </span>
           </div>
           <aggregate-conflict-handler [isPeriodLocked]="isPeriodLocked" (conflictFoundAction)="scrollEntryFormUp()"
@@ -67,7 +70,7 @@
             [(dataValuesObject)]="dataValuesObject" [orgUnitId]="entryFormParameter.orgUnit.id"
             [dataSetId]="entryFormParameter.dataSet.id" [period]="entryFormParameter.period.iso"
             [dataDimension]="this.entryFormParameter.dataDimension"></aggregate-conflict-handler>
-          <div *ngIf="!isLoading && indicators && indicators.length > 0">
+          <div *ngIf="!isLoading && indicators && indicators.length > 0 &&  entryFormType !== 'CUSTOM'">
             <div (click)="viewEntryFormIndicators(indicators)" class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Available indicators'"></span>
@@ -80,7 +83,7 @@
           <loading [loadingMessage]="loadingMessage" [loadingSize]="'large'"></loading>
         </div>
         <div *ngIf="!isLoading">
-          <div *ngIf="entryFormType && entryFormType == 'CUSTOM'">
+          <div *ngIf="entryFormType && entryFormType === 'CUSTOM'">
             <custom-data-entry-form [isPeriodLocked]="isPeriodLocked" [dataEntryFormDesign]="dataEntryFormDesign"
               (onCustomFormInputChange)="updateData($event)" (onUpdateDataSetCompleteness)="updateDataSetCompleteness()"
               (onViewUserCompletenessInformation)="viewUserCompletenessInformation($event)" [data]="dataValuesObject"
@@ -90,7 +93,7 @@
               [dataSetsCompletenessInfo]="dataSetsCompletenessInfo"></custom-data-entry-form>
           </div>
           <div *ngIf="entryFormType && entryFormType != 'CUSTOM'">
-            <div *ngIf="entryFormSections && entryFormSections.length == 0">
+            <div *ngIf="entryFormSections && entryFormSections.length === 0">
               <empty-list-notification
                 [emptyListMessage]="translationMapper['The is no field associated with this entry form, Please contact our help desk'] ">
               </empty-list-notification>
