--- a/src/pages/tracker-capture/tracker-entry-dashboard/tracker-entry-dashboard.html
+++ b/src/pages/tracker-capture/tracker-entry-dashboard/tracker-entry-dashboard.html
@@ -77,12 +77,12 @@
           <ion-row>
             <ion-col>
               <div *ngIf="currentWidget.id == 'enrollment'">
-                <profile-enrollment-form [(coordinate)]="coordinate" [(incidentDate)]="incidentDate"
-                  [(enrollmentDate)]="enrollmentDate" [(isTrackedEntityRegistered)]="isTrackedEntityRegistered"
-                  [currentProgram]="currentProgram" [currentUser]="currentUser"
-                  [(errorOrWarningMessage)]="errorOrWarningMessage" [(hiddenSections)]="hiddenSections"
-                  [(hiddenFields)]="hiddenFields" [formLayout]="formLayout" [dataObject]="dataObject"
-                  [dataUpdateStatus]="dataUpdateStatus$ | async" [currentUser]="currentUser"
+                <profile-enrollment-form (goBackEvent)="goBack()" [(coordinate)]="coordinate"
+                  [(incidentDate)]="incidentDate" [(enrollmentDate)]="enrollmentDate"
+                  [(isTrackedEntityRegistered)]="isTrackedEntityRegistered" [currentProgram]="currentProgram"
+                  [currentUser]="currentUser" [(errorOrWarningMessage)]="errorOrWarningMessage"
+                  [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields" [formLayout]="formLayout"
+                  [dataObject]="dataObject" [dataUpdateStatus]="dataUpdateStatus$ | async" [currentUser]="currentUser"
                   [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
                   [trackerRegistrationForm]="trackerRegistrationForm"
                   [programTrackedEntityAttributes]="programTrackedEntityAttributes"></profile-enrollment-form>
