--- a/src/pages/tracker-capture/tracker-entry-dashboard/tracker-entry-dashboard.html
+++ b/src/pages/tracker-capture/tracker-entry-dashboard/tracker-entry-dashboard.html
@@ -91,7 +91,11 @@
                 <div *ngIf="programStages && programStages.length > 0">
                   <div *ngFor="let programStage of programStages;trackBy: trackByFn">
                     <div *ngIf="widget.id == programStage.id">
-                      programStage : {{ programStage |json}}
+                      <program-stage-tracker-based [currentUser]="currentUser" [currentProgram]="currentProgram"
+                        [currentOrganisationUnit]="currentOrganisationUnit"
+                        [programSkipLogicMetadata]="programSkipLogicMetadata" [formLayout]="formLayout"
+                        [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance">
+                      </program-stage-tracker-based>
                     </div>
                   </div>
                 </div>
