--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -97,7 +97,7 @@
           <div *ngIf="entryFormType && entryFormType != 'CUSTOM'">
             <div *ngIf="entryFormSections && entryFormSections.length === 0">
               <empty-list-notification
-                [emptyListMessage]="translationMapper['The is no field associated with this entry form, Please contact our help desk'] ">
+                [emptyListMessage]="'The is no field associated with this entry form, Please contact our help desk'">
               </empty-list-notification>
             </div>
             <default-data-entry-form [isValidationProcessRunning]="isValidationProcessRunning"
