--- a/src/pages/data-entry/validation-rules-results/validation-rules-results.html
+++ b/src/pages/data-entry/validation-rules-results/validation-rules-results.html
@@ -37,15 +37,38 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div class="item-card">
-    <span [translate]="'Validation Results'"></span>&nbsp;&nbsp;
-    <img class="side-menu-icon" [src]="violatedValidationRules.length === 0 ?icons.success : icons.warning" />
-    <div *ngIf="violatedValidationRules.length === 0">
-      <span>The data entry screen successfully passed validation</span>
-    </div>
-    <div *ngFor="let violatedValidationRule of violatedValidationRules;trackBy: trackByFn">
-      {{violatedValidationRule |json }}
-    </div>
-  </div>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div>
+          <h4><span [translate]="'Validation Results'"></span>&nbsp;&nbsp;<img class="side-menu-icon"
+              [src]="violatedValidationRules.length === 0 ?icons.success : icons.warning" /></h4>
+          <div padding-top padding-botton class="item-card">
+            <div>
+              <b><span
+                  [translate]="violatedValidationRules.length === 0?'The data entry form successfully passed validation' : 'The data entry form has the following validation errors, please correct'"></span></b>
+            </div>
+            <div *ngIf="violatedValidationRules.length > 0" margin-top>
+              <table>
+                <thead>
+                  <th><span [translate]="'Validation rule'"></span></th>
+                  <th><span [translate]="'Left side'"></span></th>
+                  <th><span [translate]="'Operator'"></span></th>
+                  <th><span [translate]="'Right Side'"></span></th>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let violatedValidationRule of violatedValidationRules;trackBy: trackByFn">
+                    <td>{{ violatedValidationRule.displayName}}</td>
+                    <td>{{ violatedValidationRule.left.value}}</td>
+                    <td>{{ violatedValidationRule.operator}}</td>
+                    <td>{{  violatedValidationRule.right.value}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
