style: Improving styles for completenes buttons

--- a/src/pages/data-entry/validation-rules-results/validation-rules-results.html
+++ b/src/pages/data-entry/validation-rules-results/validation-rules-results.html
@@ -43,7 +43,7 @@
         <div>
           <h4><span [translate]="'Validation Results'"></span>&nbsp;&nbsp;<img class="side-menu-icon"
               [src]="violatedValidationRules.length === 0 ?icons.success : icons.warning" /></h4>
-          <div padding-top padding-botton class="item-card">
+          <div padding-top padding-bottom class="item-card">
             <div>
               <b><span
                   [translate]="violatedValidationRules.length === 0?'The data entry form successfully passed validation' : 'The data entry form has the following validation errors, please correct'"></span></b>
