--- a/src/index.html
+++ b/src/index.html
@@ -24,35 +24,23 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>dhis-2-touch</title>
 
     <base href="/" />
 
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
     <!--Jquery files-->
-    <script
-      type="application/javascript"
-      src="assets/library/jquery/jquery-2.1.1.min.js"
-    ></script>
-    <script
-      type="application/javascript"
-      src="assets/library/jquery-ui/jquery-ui.min.js"
-    ></script>
+    <script type="application/javascript" src="assets/library/jquery/jquery-2.1.1.min.js"></script>
+    <script type="application/javascript" src="assets/library/jquery-ui/jquery-ui.min.js"></script>
 
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-    <link
-      rel="stylesheet"
-      href="assets/library/animation/animate.min.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="assets/library/animation/animate.min.css" rel="stylesheet" />
 
     <!-- add leaflet css from copied assets -->
     <link href="assets/leaflet.css" rel="stylesheet" />
@@ -60,87 +48,47 @@
 
     <!--add css for jquery ui-->
     <link href="assets/library/jquery-ui/jquery-ui.min.css" rel="stylesheet" />
-    <link
-      href="assets/library/jquery-ui/jquery-ui.structure.min.css"
-      rel="stylesheet"
-    />
+    <link href="assets/library/jquery-ui/jquery-ui.structure.min.css" rel="stylesheet" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  </head>
+</head>
 
-  <body>
+<body>
     <app-root></app-root>
     <!-- jquery calendar files-->
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.picker.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.plus.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.picker.ext.js"
-    ></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.picker.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.plus.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.picker.ext.js"></script>
 
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.coptic.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.ethiopian.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.islamic.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.julian.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.nepali.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"
-    ></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.coptic.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.ethiopian.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.islamic.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.julian.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.nepali.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
 
     <!-- Periods files-->
 
     <script src="assets/library/dhis2/dhis2.util.js"></script>
     <script src="assets/library/dhis2/dhis2.period.js"></script>
     <script>
-      dhis2.network = {};
-      dhis2.period['initiateCalendar'] = function(calender) {
-        calender = calender ? calender : 'gregorian';
-        dhis2.period.calendar = $.calendars.instance(calender);
-        dhis2.period.generator = new dhis2.period.PeriodGenerator(
-          dhis2.period.calendar,
-          dhis2.period.DEFAULT_DATE_FORMAT
-        );
-      };
+        dhis2.network = {};
+        dhis2.period['initiateCalendar'] = function(calender) {
+            calender = calender ? calender : 'gregorian';
+            calender = calender !== 'iso8601' ? calender : 'gregorian';
+            dhis2.period.calendar = $.calendars.instance(calender);
+            dhis2.period.generator = new dhis2.period.PeriodGenerator(
+                dhis2.period.calendar,
+                dhis2.period.DEFAULT_DATE_FORMAT
+            );
+        };
     </script>
-    <script
-      type="text/javascript"
-      src="assets/library/sql-lite-extension.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/aggregate-data-extension.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/library/case-based-extension.js"
-    ></script>
-  </body>
+    <script type="text/javascript" src="assets/library/sql-lite-extension.js"></script>
+    <script type="text/javascript" src="assets/library/aggregate-data-extension.js"></script>
+    <script type="text/javascript" src="assets/library/case-based-extension.js"></script>
+</body>
+
 </html>
