feat: Support of persian calender

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.islamic.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.julian.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.nepali.min.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.persian.min.js "></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
 
     <!-- Periods files-->
